<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/productsToViewTitle">
	 	<CheckBoxPreference
                android:key="viewCoffee"
                android:title="@string/viewCoffeeTitle"
                android:summary="@string/viewCoffeeSummary"
	 			android:defaultValue="true" />
		<CheckBoxPreference
                android:key="viewTea"
                android:title="@string/viewTeaTitle"
                android:summary="@string/viewTeaSummary"
	 			android:defaultValue="true" />
		<CheckBoxPreference
                android:key="viewSoftDrinks"
                android:title="@string/viewSoftDrinksTitle"
                android:summary="@string/viewSoftDrinksSummary"
	 			android:defaultValue="true" />
		<CheckBoxPreference
                android:key="viewEnergyDrinks"
                android:title="@string/viewEnergyDrinksTitle"
                android:summary="@string/viewEnergyDrinksSummary"
	 			android:defaultValue="true" />
	</PreferenceCategory>
</PreferenceScreen>