<preference-headers
        xmlns:android="http://schemas.android.com/apk/res/android">

    <header android:fragment="com.googlecode.rich2012cafe.controller.Preferences$UserSettingsFragment"
            android:title="@string/userSettingsTitle"
            android:summary="@string/userSettingsSummary" />
            
    <header android:fragment="com.googlecode.rich2012cafe.controller.Preferences$ProductSettingsFragment"
     		android:title="@string/productSettingsTitle"
            android:summary="@string/productSettingsSummary" />
            
    <header android:fragment="com.googlecode.rich2012cafe.controller.Preferences$SourceSettingsFragment"
            android:title="@string/sourceSettingsTitle"
            android:summary="@string/sourceSettingsSummary" />
            
</preference-headers>