<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/productSettingsTitle">
        
        <PreferenceScreen
            android:fragment="com.googlecode.rich2012cafe.controller.Preferences$ProductsToViewFragment"
            android:title="@string/productsToViewTitle"
            android:summary="@string/productsToViewSummary" />
        
         <PreferenceScreen
                android:title="@string/favouriteProductsTitle"
                android:summary="@string/favouriteProductsSummary">

            <intent 
                android:action="android.intent.action.MAIN"
                android:targetPackage="com.googlecode.rich2012cafe"
                android:targetClass = "com.googlecode.rich2012cafe.controller.JonText" />
         </PreferenceScreen>
         
	</PreferenceCategory>
	
    
</PreferenceScreen>